--- a/roles/mumble/tasks/main.yml
+++ b/roles/mumble/tasks/main.yml
@@ -6,4 +6,17 @@
     name: mumble-server
     state: present
 
+- name: ensure the mumble service is set to start-up
+service:
+  name: mumble-server
+  enabled: yes
+
+- name: place the mumble server ini from template
+template:
+  src: mumble-server.ini.j2
+  dest: /etc/mumble-server.ini
+  group: root
+  owner: root
+  mode: u=rw,g=rw
+
 # vim:ft=ansible)
