--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -3,7 +3,7 @@
 
 - name: update apt, upgrade apt
   apt:
-    update_cache: yes
-    upgrade: yes
+    update_cache: "yes"
+    upgrade: "yes"
 
 # vim:ft=ansible)
